Implemented the Stripe API and frontend for it on the Sign Up page.

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -37,3 +37,4 @@
 // Custom style
 // Your custom style to override base style
 @import "./custom/custom.less";
+@import (inline) "./custom/creditcard.css";
