Implemented Email user confirmation, Specials additional fields, Hours and Notes features.

--- a/app/styles/custom/custom.less
+++ b/app/styles/custom/custom.less
@@ -42,3 +42,42 @@
 .media-photo-block {
   display: block
 }
+
+.everyday-wrp {
+  width: 80px;
+  padding: 0px !important;
+}
+
+.everyday-wrp label {
+  line-height: 27px;
+  padding-left: 3px;
+}
+
+.everyday-chb {
+  height: 22px;
+  float: left;
+}
+
+select.chb-spec-type {
+  width: 60px;
+  height: 30px;
+  line-height: 1.5;
+}
+
+.specials-footer {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  left: 240px;
+  background-color: #fff;
+  padding-top: 10px;
+}
+
+.specials-top-part {
+  padding-bottom: 100px;
+}
+
+div.hrs-wrap1 {
+  padding-left: 20px;
+}
